--- a/.github/workflows/js-ts-release.yml
+++ b/.github/workflows/js-ts-release.yml
@@ -244,43 +244,34 @@ jobs:
       - name: Download and organize artifacts with NAPI-RS
         working-directory: javascript
         run: |
-          # 1. Cleanup root binaries
-          echo "🧹 Cleaning up local binaries..."
-          rm -f *.node
+          # 1. Generate the npm/ directory structure and platform package.json files
+          echo "📦 Generating npm/ directory structure with napi prepublish..."
+          mkdir -p npm
+          npx napi prepublish -t npm
           
-          # 2. Create a clean, flat artifacts directory with triple names
-          # NAPI-RS 'artifacts' command expects [name].[triple].node in the artifacts dir
-          echo "🔄 Organizing binaries into flat ./artifacts directory with Rust triples..."
-          mkdir -p temp_artifacts
-          cp artifacts/aarch64-apple-darwin/graphbit-js.darwin-arm64.node temp_artifacts/graphbit-js.aarch64-apple-darwin.node
-          cp artifacts/x86_64-apple-darwin/graphbit-js.darwin-x64.node temp_artifacts/graphbit-js.x86_64-apple-darwin.node
-          cp artifacts/aarch64-unknown-linux-gnu/graphbit-js.linux-arm64-gnu.node temp_artifacts/graphbit-js.aarch64-unknown-linux-gnu.node
-          cp artifacts/x86_64-unknown-linux-gnu/graphbit-js.linux-x64-gnu.node temp_artifacts/graphbit-js.x86_64-unknown-linux-gnu.node
-          cp artifacts/x86_64-unknown-linux-musl/graphbit-js.linux-x64-musl.node temp_artifacts/graphbit-js.x86_64-unknown-linux-musl.node
-          cp artifacts/aarch64-pc-windows-msvc/graphbit-js.win32-arm64-msvc.node temp_artifacts/graphbit-js.aarch64-pc-windows-msvc.node
-          cp artifacts/x86_64-pc-windows-msvc/graphbit-js.win32-x64-msvc.node temp_artifacts/graphbit-js.x86_64-pc-windows-msvc.node
+          echo "📂 Mapping binaries to their respective platform packages..."
+          # We move each binary from its download folder directly into its final npm sub-package destination.
+          # This bypasses the flaky 'napi artifacts' discovery logic.
           
-          # Replace the old artifacts folder with the new sanitized one
-          rm -rf artifacts
-          mv temp_artifacts artifacts
+          mv -v artifacts/aarch64-apple-darwin/graphbit-js.darwin-arm64.node npm/darwin-arm64/
+          mv -v artifacts/x86_64-apple-darwin/graphbit-js.darwin-x64.node npm/darwin-x64/
+          mv -v artifacts/aarch64-unknown-linux-gnu/graphbit-js.linux-arm64-gnu.node npm/linux-arm64-gnu/
+          mv -v artifacts/x86_64-unknown-linux-gnu/graphbit-js.linux-x64-gnu.node npm/linux-x64-gnu/
+          mv -v artifacts/x86_64-unknown-linux-musl/graphbit-js.linux-x64-musl.node npm/linux-x64-musl/
+          mv -v artifacts/aarch64-pc-windows-msvc/graphbit-js.win32-arm64-msvc.node npm/win32-arm64-msvc/
+          mv -v artifacts/x86_64-pc-windows-msvc/graphbit-js.win32-x64-msvc.node npm/win32-x64-msvc/
           
-          echo "📜 Sanitized artifacts folder content:"
-          ls -F artifacts/
-          
-          # 3. Use 'napi artifacts' to organize the triple-named files into 'npm/'
-          echo "📦 Running 'napi artifacts' to populate npm/ directory..."
-          npx napi artifacts
-          
-          echo "📁 Checking generated npm/ directory:"
+          echo "📁 checking generated npm/ directory:"
           if [ -d "npm" ]; then
             find npm -maxdepth 3 -ls
           else
-            echo "::error::npm/ directory was NOT created correctly. 'napi artifacts' might have failed."
+            echo "::error::npm/ directory was NOT created correctly. Publication will fail."
             exit 1
           fi
           
-          # Cleanup raw artifacts now that they are organized
+          # Cleanup raw artifacts and local copies before publication
           rm -rf artifacts/
+          rm -f *.node
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
