--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,7 +161,10 @@ version = "0.6.0"
 aiofiles = ">=23.0.0"
 aiohttp = "^3.12.15"
 huggingface_hub = ">=0.33.4"
-numpy = ">=1.24.0"
+numpy = [
+  {version = "1.24.0", python = ">=3.9,<3.11"},  # For Python 3.9 and 3.10
+  {version = "2.4.0", python = ">=3.11,<3.15"}  # For Python 3.11 to 3.14
+]
 python = ">=3.9,<3.15"
 python-dotenv = ">=1.0.0"
 rich = ">=13.0.0"
