--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,5 @@ $RECYCLE.BIN/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.flake8
+.zed/
