--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -17,7 +17,6 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "Programming Language :: Python :: 3.14",
   "Programming Language :: Rust",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Scientific/Engineering :: Artificial Intelligence"
@@ -39,8 +38,8 @@ maintainers = [
 ]
 name = "graphbit"
 readme = "README.md"
-requires-python = ">=3.9,<3.15"
-version = "0.6.0"
+requires-python = ">=3.9,<3.14"
+version = "0.6.1"
 
 [project.urls]
 "Bug Tracker" = "https://github.com/InfinitiBit/graphbit/issues"
@@ -58,3 +57,7 @@ profile = "release"
 python-source = "python-src"
 skip-auditwheel = false
 strip = true
+
+# Post-build script - shows license notice after build
+[tool.maturin.scripts]
+post-build = "build_notice:show_build_license_notice"
