--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -42,6 +42,7 @@ workspace = true
 description = "Production-grade Python bindings for GraphBit agentic workflow automation"
 name = "graphbit"
 publish = false
+build = "build.rs"
 authors.workspace = true
 categories.workspace = true
 documentation.workspace = true
