--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,7 +127,7 @@ pythonize = "0.24"
 quick-xml = {version = "0.36", features = ["serialize"]}
 rand = "0.8"
 regex = "1.10"
-reqwest = {version = "0.11", features = ["json"]}
+reqwest = {version = "0.11", features = ["json", "stream"]}
 # HTML parsing
 scraper = "0.20"
 serde = {version = "1.0", features = ["derive"]}
