--- a/benchmarks/pyproject.toml
+++ b/benchmarks/pyproject.toml
@@ -12,11 +12,14 @@ dependencies = [
   "langchain-core>=1.2.6",
   "langchain-ollama>=1.0.1",
   "langchain-openai>=1.1.6",
+  "langgraph>=0.2.0",
   "llama-index>=0.14.12",
   "llama-index-llms-anthropic>=0.10.5",
   "llama-index-llms-ollama>=0.9.1",
   "pydantic-ai>=1.22.0",
-  "openai>=1.83.0"
+  "openai>=1.83.0",
+  "click>=8.1.0",
+  "datasets>=2.14.0"
 ]
 description = "Benchmarking package for GraphBit framework"
 name = "graphbit-benchmarks"
@@ -50,3 +53,6 @@ psutil = ">=7.2.1"
 pydantic-ai = {version = ">=1.22.0", python = ">=3.10"}
 python = ">=3.10,<3.14"
 seaborn = ">=0.13.2"
+click = ">=8.1.0"
+datasets = ">=2.14.0"
+langgraph = {version = ">=0.2.0", python = ">=3.10,<4.0"}
