--- a/benchmarks/pyproject.toml
+++ b/benchmarks/pyproject.toml
@@ -6,6 +6,8 @@ dependencies = [
   "matplotlib>=3.9.0",
   "seaborn>=0.13.2",
   "psutil>=7.2.1",
+  "autogen-agentchat>=0.4.0",
+  "autogen-ext[openai,anthropic,ollama]>=0.4.0",
   "crewai>=1.6.0; python_version < '3.14'",
   "langchain>=1.2.0",
   "langchain-anthropic>=1.3.0",
@@ -35,6 +37,8 @@ readme = "README.md"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
+autogen-agentchat = ">=0.4.0"
+autogen-ext = {version = ">=0.4.0", extras = ["openai", "anthropic", "ollama"]}
 crewai = {version = ">=1.6.0", python = ">=3.10,<3.14"}
 graphbit = ">=0.6.0"
 langchain = {version = ">=1.2.0", python = ">=3.10,<4.0"}
