--- a/benchmarks/docker-compose.yml
+++ b/benchmarks/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       # LLM Provider API Keys
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      # Azure OpenAI
+      - AZURE_OPENAI_API_KEY=${AZURE_OPENAI_API_KEY}
+      - AZURE_OPENAI_ENDPOINT=${AZURE_OPENAI_ENDPOINT}
+      - AZURE_OPENAI_API_VERSION=${AZURE_OPENAI_API_VERSION:-2025-01-01-preview}
       # Python configuration
       - PYTHONUNBUFFERED=1
       - PYTHONUTF8=1
