--- a/benchmarks/Dockerfile
+++ b/benchmarks/Dockerfile
@@ -1,33 +1,34 @@
+# syntax=docker/dockerfile:1
 FROM python:3.12-slim
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUTF8=1 \
-    DEBIAN_FRONTEND=noninteractive \
-    RUST_LOG=info
-
 # Install system dependencies
+# - curl, ca-certificates: for downloading tools/security
+# - build-essential: for compiling C extensions (needed for psutil, etc.)
+# - git: for git-based dependencies
+# - procps: provides 'ps' command needed by some benchmarks
 RUN apt-get update && apt-get install -y \
     curl \
     ca-certificates \
+    build-essential \
+    git \
+    procps \
     && rm -rf /var/lib/apt/lists/*
 
-# Install UV (modern Python package installer)
+# Install uv for fast Python package management
 RUN pip install --no-cache-dir uv
 
-# Set working directory
 WORKDIR /app/benchmarks
 
-# Copy pyproject.toml (build context is benchmarks/, so no prefix needed)
-COPY pyproject.toml ./
+# Copy pyproject.toml and lockfile
+COPY pyproject.toml uv.lock ./
 
 # Install dependencies from PyPI
 # UV will fetch graphbit>=0.6.0 from PyPI as a binary wheel
+# --no-cache-dir reduces image size
+# -v enables verbose output to debug resolution issues
 RUN uv venv && \
     . .venv/bin/activate && \
-    uv pip install graphbit>=0.6.0 && \
-    uv sync --no-dev
+    uv pip install --no-cache-dir -r pyproject.toml
 
 # Copy all benchmark source files
 # This includes .env if present (and not in .dockerignore)
@@ -36,32 +37,16 @@ COPY . ./
 # Create results and logs directories
 RUN mkdir -p results logs
 
-# Create entrypoint script
+# Set entrypoint script
 RUN echo '#!/bin/bash' > /entrypoint.sh && \
     echo 'set -e' >> /entrypoint.sh && \
-    echo 'cd /app/benchmarks' >> /entrypoint.sh && \
-    echo '. .venv/bin/activate' >> /entrypoint.sh && \
-    echo '# If first arg is a .py file or benchmark script, prepend python' >> /entrypoint.sh && \
-    echo 'if [[ "$1" == *.py ]] || [[ "$1" == run_benchmark.py ]]; then' >> /entrypoint.sh && \
-    echo '  exec python "$@"' >> /entrypoint.sh && \
-    echo 'else' >> /entrypoint.sh && \
-    echo '  exec "$@"' >> /entrypoint.sh && \
-    echo 'fi' >> /entrypoint.sh && \
+    echo '. /app/benchmarks/.venv/bin/activate' >> /entrypoint.sh && \
+    echo 'exec "$@"' >> /entrypoint.sh && \
     chmod +x /entrypoint.sh
 
-# Health check - verify all frameworks import successfully
-RUN . .venv/bin/activate && python -c "\
-import graphbit; print(f'✓ GraphBit {graphbit.__version__}'); \
-import langchain; print('✓ LangChain'); \
-import langgraph; print('✓ LangGraph'); \
-import autogen_agentchat; print('✓ AutoGen'); \
-import crewai; print('✓ CrewAI'); \
-import pydantic_ai; print('✓ PydanticAI'); \
-import llama_index; print('✓ LlamaIndex'); \
-print('All 7 frameworks OK!')"
+# Verify installation of key packages
+RUN . .venv/bin/activate && python -c "import graphbit; print(f'GraphBit version: {graphbit.__version__}')"
 
 WORKDIR /app/benchmarks
-
-# Default command
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["run_benchmark.py", "--help"]
+CMD ["python", "run_benchmark.py"]
