--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,7 +150,7 @@ authors = ["InfinitiBit Team"]
 description = "GraphBit - Advanced workflow automation and AI agent orchestration library"
 homepage = "https://github.com/InfinitiBit/graphbit"
 name = "graphbit"
-package-mode = true
+package-mode = false
 readme = "README.md"
 repository = "https://github.com/InfinitiBit/graphbit"
 version = "0.6.1"
