--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,8 @@ async-trait = "0.1.88"
 chrono = {version = "0.4", features = ["serde"]}
 # CSV and XML parsing
 csv = "1.3"
+# Excel parsing (including XLSB support)
+calamine = "0.26"
 # Document processing
 docx-rs = "0.4"
 futures = "0.3"
