--- a/javascript/package.json
+++ b/javascript/package.json
@@ -2,8 +2,8 @@
   "name": "@infinitibit_gmbh/graphbit",
   "version": "0.5.1",
   "description": "JavaScript/Node.js bindings for GraphBit agentic workflow automation framework",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "graphbit.js",
+  "types": "graphbit.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/InfinitiBit/graphbit.git",
