feat(js): include graphbit.js and graphbit.d.ts in package files

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -86,6 +86,9 @@
   "files": [
     "index.js",
     "index.d.ts",
+    "graphbit.js",
+    "graphbit.d.ts",
+    "lib/",
     "README.md",
     "LICENSE.md"
   ],
