--- a/javascript/Cargo.toml
+++ b/javascript/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.5"
 description = "JavaScript/Node.js bindings for GraphBit agentic workflow automation"
 authors = ["GraphBit Team"]
 edition = "2021"
-license-file = "../LICENSE.md"
+license = "Apache-2.0"
 repository = "https://github.com/InfinitiBit/graphbit"
 homepage = "https://graphbit.ai"
 documentation = "https://docs.graphbit.ai"
