--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,7 @@ quick-xml.workspace = true
 rand.workspace = true
 regex.workspace = true
 reqwest.workspace = true
+rusqlite.workspace = true
 scraper.workspace = true
 serde.workspace = true
 serde_json.workspace = true
